--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     ],
     "require": {
         "php": "^7.1",
-        "illuminate/support": "5.8.*"
+        "illuminate/support": "5.8.*",
+        "symfony/process": "^4.3"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
