--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/process": "^4.1"
     },
     "require-dev": {
+        "liip/rmt": "^1.5",
         "orchestra/testbench": "3.8.*",
         "phpunit/phpunit": "^7.0"
     },
