--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ before_install:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
+  - mysql -e 'create database crawl_test;'
+services:
+  - mysql
 
 script:
   - vendor/bin/phpunit --coverage-text --coverage-clover=coverage.clover
