--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,11 @@
         "symfony/process": "^4.1"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.15",
         "liip/rmt": "^1.5",
         "orchestra/testbench": "3.8.*",
+        "phpmd/phpmd": "^2.7",
+        "phpstan/phpstan": "^0.11.16",
         "phpunit/phpunit": "^7.0",
         "squizlabs/php_codesniffer": "^3.5"
     },
@@ -37,8 +40,13 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
-
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+        "inspect": [
+            "vendor/bin/phpcs",
+            "vendor/bin/phpstan analyze src"
+        ],
+        "inspect-fix": "vendor/bin/php-cs-fixer fix src",
+        "insights" : "vendor/bin/phpmd src text phpmd.xml"
     },
     "config": {
         "sort-packages": true
