--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "symfony/process": "^4.1"
+        "symfony/process": "^4.1|^5.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
