update schemacrawler to 16.7.2

--- a/bin/schemacrawler/config/schemacrawler.config.properties
+++ b/bin/schemacrawler/config/schemacrawler.config.properties
@@ -35,6 +35,7 @@
 #schemacrawler.schema_info_level.retrieve_trigger_information=false
 #schemacrawler.schema_info_level.retrieve_user_defined_column_data_types=false
 #schemacrawler.schema_info_level.retrieve_view_information=false
+#schemacrawler.schema_info_level.retrieve_weak_associations=false
 # Override the meta-data retrieval strategy
 # This can affect speed, so they are commented out in order to use database
 # specific defaults
