--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
            php-version: ${{ matrix.php-versions }}
     - name: Set up Database
       run: |
+        sudo systemctl start mysql
         mysql -u root -proot -e "CREATE USER 'homestead'@'localhost' IDENTIFIED BY 'secret';"
         mysql -u root -proot -e "GRANT ALL ON crawl_test.* TO 'homestead'@'localhost';"
     - name: Install Dependencies
