--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.1",
-        "symfony/process": "^4.1|^5.0"
+        "php": "^7.4|^8.0",
+        "symfony/process": "^4.1|^5.0|^6.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.15",
