--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,9 @@
         "symfony/process": "^4.1|^5.0|^6.0"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.15",
         "liip/rmt": "^1.5",
-        "orchestra/testbench": "3.8.*",
-        "phpmd/phpmd": "^2.7",
-        "phpstan/phpstan": "^0.11.16",
-        "phpunit/phpunit": "^7.0",
-        "squizlabs/php_codesniffer": "^3.5"
+        "orchestra/testbench": "3.8.*|^4.0|^5.0",
+        "phpunit/phpunit": "^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
