--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Set up Database
       run: |
         sudo systemctl start mysql
-        mysql -e 'create database crawl_test;'
+        mysql -u root -proot -e 'create database crawl_test;'
         mysql -u root -proot -e "CREATE USER 'homestead'@'localhost' IDENTIFIED BY 'secret';"
         mysql -u root -proot -e "GRANT ALL ON crawl_test.* TO 'homestead'@'localhost';"
     - name: Install Dependencies
