--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,15 +5,6 @@ on: [push, pull_request]
 jobs:
   run-tests:
     runs-on: ubuntu-latest
-#    services:
-#      mysql:
-#        image: mysql:5.7
-#        env:
-#          MYSQL_ROOT_PASSWORD: root
-#          MYSQL_DATABASE: crawl_test
-#        ports:
-#          - 3307:3306
-#        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     strategy:
         matrix:
             php-versions: ['7.4']
@@ -24,6 +15,10 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
            php-version: ${{ matrix.php-versions }}
+    - name Install Graphviz:
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y graphviz
     - name: Set up Database
       run: |
         sudo systemctl start mysql
