--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       uses: shivammathur/setup-php@v2
       with:
            php-version: ${{ matrix.php-versions }}
-    - name Install Graphviz:
+    - name: Install Graphviz
       run: |
         sudo apt-get update
         sudo apt-get install -y graphviz
