--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
         matrix:
-            php-versions: ['7.4']
+            php-versions: ['7.4', '8.0']
             composer-flags: ["--prefer-lowest", ""]
     steps:
     - uses: actions/checkout@v2
